# opx-logging

./: .gitreview  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
debian/: changelog  control  libopx-logging-test.install  opx-logging.install  rules
inc/: Makefile.am
inc/opx/: event_log.h  event_log_dep.h  event_log_types.h  event_log_utils.h
src/: enum_automation.py  event_log.c  event_log.cpp  event_log_cli.c  event_log_utils.c  opx_logging_cli
src/python_extension/: event_log.c  setup.py
src/unit_test/: event_log_unittest.cpp  run_test
